--- a/GasolineraPUMA/packages.config
+++ b/GasolineraPUMA/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.Core" version="1.6.0" targetFramework="net472" />
+  <package id="Azure.Core" version="1.21.0" targetFramework="net472" />
   <package id="Azure.Identity" version="1.3.0" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.14.0" targetFramework="net472" />
@@ -24,6 +24,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory.Data" version="1.0.2" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
@@ -32,6 +33,6 @@
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net472" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
