--- a/GasolineraPUMA/GasolineraPUMA.csproj
+++ b/GasolineraPUMA/GasolineraPUMA.csproj
@@ -166,6 +166,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clases\classListadoProducto.cs" />
+    <Compile Include="Clases\classProducto.cs" />
     <Compile Include="Clases\Conexion.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
