--- a/GasolineraPUMA/packages.config
+++ b/GasolineraPUMA/packages.config
@@ -17,6 +17,8 @@
   <package id="Microsoft.IdentityModel.Protocols" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.WebForms" version="150.1484.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.27" targetFramework="net472" />
   <package id="MySqlConnector" version="1.3.14" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
