--- a/GasolineraPUMA/GasolineraPUMA.csproj
+++ b/GasolineraPUMA/GasolineraPUMA.csproj
@@ -167,6 +167,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\Conexion.cs" />
+    <Compile Include="Frm_AgregarProveedores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_AgregarProveedores.Designer.cs">
+      <DependentUpon>Frm_AgregarProveedores.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_ListaProveedores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -181,6 +187,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Frm_AgregarProveedores.resx">
+      <DependentUpon>Frm_AgregarProveedores.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_ListaProveedores.resx">
       <DependentUpon>Frm_ListaProveedores.cs</DependentUpon>
     </EmbeddedResource>
