--- a/GasolineraPUMA/GasolineraPUMA.csproj
+++ b/GasolineraPUMA/GasolineraPUMA.csproj
@@ -167,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\Conexion.cs" />
+    <Compile Include="Clases\listaProveedores.cs" />
     <Compile Include="Clases\proveedor.cs" />
     <Compile Include="Frm_AgregarProveedores.cs">
       <SubType>Form</SubType>
